Feature(eos_cli_config_gen): Implement managing RCF.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-general.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-general.yml
@@ -14,3 +14,16 @@ router_general:
         dynamic_prefix_lists:
           - name: DYNAMIC_TEST_PREFIX_LIST_2
           - name: DYNAMIC_TEST_PREFIX_LIST_1
+  control_functions:
+    code_units:
+      - name: code1
+        content: |-
+          function ACCEPT_ALL() {
+            return true;
+            }
+          EOF
+      - name: code2
+        content: |-
+          function DENY_ALL() {
+            return true;
+            }
