--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12164,6 +12164,21 @@ keys:
                       name:
                         type: str
                         description: Dynamic Prefix List Name
+      control_functions:
+        type: dict
+        description: Configure routing control function to control which routes to
+          filter and accept from a peer or routing protocol.
+        keys:
+          code_units:
+            type: list
+            primary_key: name
+            items:
+              type: dict
+              keys:
+                name:
+                  type: str
+                content:
+                  type: str
   router_igmp:
     type: dict
     display_name: Router IGMP Configuration
