Feat(eos_designs): Add support for setting mgmt_gateway under the node settings

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -8119,6 +8119,9 @@ $defs:
               $ref: eos_designs#/$defs/node_type/keys/nodes
               description: Define variables per node.
               type: list
+            mgmt_gateway:
+              type: str
+              description: Management interface gateway in IPv4 format.
       nodes:
         description: Define variables per node.
         type: list
@@ -8132,6 +8135,9 @@ $defs:
             name:
               type: str
               description: The Node Name is used as "hostname".
+            mgmt_gateway:
+              type: str
+              description: Management interface gateway in IPv4 format.
   node_type_l3_interfaces:
     type: list
     primary_key: name
