--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1324,6 +1324,9 @@ $defs:
               "$ref": "eos_designs#/$defs/node_type/keys/nodes"
               description: Define variables per node.
               type: list
+            mgmt_gateway:
+              type: str
+              description: Management interface gateway in IPv4 format.
       nodes:
         description: Define variables per node.
         type: list
@@ -1337,3 +1340,6 @@ $defs:
             name:
               type: str
               description: The Node Name is used as "hostname".
+            mgmt_gateway:
+              type: str
+              description: Management interface gateway in IPv4 format.
