--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_MLAG_STRUCTURED_CONFIG_L2LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_MLAG_STRUCTURED_CONFIG_L2LEAFS.yml
@@ -30,7 +30,9 @@ l2leaf:
           id: 1
           mgmt_ip: 192.168.201.201/24
           uplink_switch_interfaces: [ Ethernet5, Ethernet5 ]
+          mgmt_gateway: 1.1.1.3
         - name: UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1B
           id: 2
           mgmt_ip: 192.168.201.201/24
           uplink_switch_interfaces: [ Ethernet6, Ethernet6 ]
+      mgmt_gateway: 1.1.1.2
