Adding description to code_units keys, replace regex_replace with replace.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12177,8 +12177,12 @@ keys:
               keys:
                 name:
                   type: str
+                  description: Name of the code unit.
                 content:
                   type: str
+                  description: "Content of route control function. Write 'EOF' below
+                    the content.\ne.g.\nfunction ACCEPT_ALL() {\n  return true;\n
+                    \ }\nEOF"
   router_igmp:
     type: dict
     display_name: Router IGMP Configuration
