--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
@@ -70,5 +70,13 @@ keys:
               keys:
                 name:
                   type: str
+                  description: Name of the code unit.
                 content:
                   type: str
+                  description: |-
+                    Content of route control function. Write 'EOF' below the content.
+                    e.g.
+                    function ACCEPT_ALL() {
+                      return true;
+                      }
+                    EOF
