--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/cleanup.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/cleanup.yml
@@ -23,7 +23,7 @@
         ws_req_state: submitted
         ws_force: true
         cc_name: cc_avd_studio-cleanup-{{ r }}
-        cc_requested_state: running
+        cc_requested_state: completed
         cc_description: sample description
       run_once: true
 
