--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-l3leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-l3leaf1.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname downlink-ipv4-pool-l3leaf4
+hostname downlink-pools-l3leaf1
 !
 no enable password
 no aaa root
@@ -14,45 +14,31 @@ no aaa root
 vrf instance MGMT
 !
 interface Ethernet1
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet6
+   description P2P_LINK_TO_DOWNLINK-POOLS-SPINE1_Ethernet3
    no shutdown
    mtu 9214
    no switchport
-   ip address 10.0.1.7/31
+   ip address 10.0.1.1/31
 !
 interface Ethernet2
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet6
+   description P2P_LINK_TO_DOWNLINK-POOLS-SPINE1_Ethernet4
    no shutdown
    mtu 9214
    no switchport
-   ip address 10.0.4.3/31
-!
-interface Ethernet3
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet16
-   no shutdown
-   mtu 9214
-   no switchport
-   ip address 10.0.3.19/31
-!
-interface Ethernet4
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet16
-   no shutdown
-   mtu 9214
-   no switchport
-   ip address 10.0.4.7/31
+   ip address 10.0.1.3/31
 !
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
-   ip address 192.168.1.40/32
+   ip address 192.168.1.10/32
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
-   ip address 192.168.2.40/32
+   ip address 192.168.2.10/32
 !
 interface Vxlan1
-   description downlink-ipv4-pool-l3leaf4_VTEP
+   description downlink-pools-l3leaf1_VTEP
    vxlan source-interface Loopback1
    vxlan udp-port 4789
 !
@@ -69,8 +55,8 @@ route-map RM-CONN-2-BGP permit 10
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
-router bgp 65039
-   router-id 192.168.1.40
+router bgp 65009
+   router-id 192.168.1.10
    maximum-paths 4 ecmp 4
    update wait-install
    no bgp default ipv4-unicast
@@ -83,24 +69,15 @@ router bgp 65039
    neighbor IPv4-UNDERLAY-PEERS peer group
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
-   neighbor 10.0.1.6 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.1.6 remote-as 65000
-   neighbor 10.0.1.6 description downlink-ipv4-pool-spine1_Ethernet6
-   neighbor 10.0.3.18 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.3.18 remote-as 65000
-   neighbor 10.0.3.18 description downlink-ipv4-pool-spine1_Ethernet16
-   neighbor 10.0.4.2 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.4.2 remote-as 65000
-   neighbor 10.0.4.2 description downlink-ipv4-pool-spine2_Ethernet6
-   neighbor 10.0.4.6 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.4.6 remote-as 65000
-   neighbor 10.0.4.6 description downlink-ipv4-pool-spine2_Ethernet16
+   neighbor 10.0.1.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.1.0 remote-as 65000
+   neighbor 10.0.1.0 description downlink-pools-spine1_Ethernet3
+   neighbor 10.0.1.2 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.1.2 remote-as 65000
+   neighbor 10.0.1.2 description downlink-pools-spine1_Ethernet4
    neighbor 192.168.0.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.0.10 remote-as 65000
-   neighbor 192.168.0.10 description downlink-ipv4-pool-spine1
-   neighbor 192.168.0.20 peer group EVPN-OVERLAY-PEERS
-   neighbor 192.168.0.20 remote-as 65000
-   neighbor 192.168.0.20 description downlink-ipv4-pool-spine2
+   neighbor 192.168.0.10 description downlink-pools-spine1
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
