--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-l3leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-l3leaf2.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname downlink-ipv4-pool-l3leaf2
+hostname downlink-pools-l3leaf2
 !
 no enable password
 no aaa root
@@ -14,14 +14,14 @@ no aaa root
 vrf instance MGMT
 !
 interface Ethernet1
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet3
+   description P2P_LINK_TO_DOWNLINK-POOLS-SPINE2_Ethernet3
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.2.1/31
 !
 interface Ethernet2
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet4
+   description P2P_LINK_TO_DOWNLINK-POOLS-SPINE2_Ethernet4
    no shutdown
    mtu 9214
    no switchport
@@ -38,7 +38,7 @@ interface Loopback1
    ip address 192.168.2.20/32
 !
 interface Vxlan1
-   description downlink-ipv4-pool-l3leaf2_VTEP
+   description downlink-pools-l3leaf2_VTEP
    vxlan source-interface Loopback1
    vxlan udp-port 4789
 !
@@ -71,13 +71,13 @@ router bgp 65019
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor 10.0.2.0 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.2.0 remote-as 65000
-   neighbor 10.0.2.0 description downlink-ipv4-pool-spine2_Ethernet3
+   neighbor 10.0.2.0 description downlink-pools-spine2_Ethernet3
    neighbor 10.0.2.2 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.2.2 remote-as 65000
-   neighbor 10.0.2.2 description downlink-ipv4-pool-spine2_Ethernet4
+   neighbor 10.0.2.2 description downlink-pools-spine2_Ethernet4
    neighbor 192.168.0.20 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.0.20 remote-as 65000
-   neighbor 192.168.0.20 description downlink-ipv4-pool-spine2
+   neighbor 192.168.0.20 description downlink-pools-spine2
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
