--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-spine1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-spine1.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname downlink-ipv4-pool-spine1
+hostname downlink-pools-spine1
 !
 spanning-tree mode none
 !
@@ -16,42 +16,42 @@ no aaa root
 vrf instance MGMT
 !
 interface Ethernet3
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF1_Ethernet1
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF1_Ethernet1
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.1.0/31
 !
 interface Ethernet4
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF1_Ethernet2
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF1_Ethernet2
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.1.2/31
 !
 interface Ethernet5
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet1
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet1
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.1.4/31
 !
 interface Ethernet6
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet1
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet1
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.1.6/31
 !
 interface Ethernet15
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet3
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet3
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.3.0/31
 !
 interface Ethernet16
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet3
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet3
    no shutdown
    mtu 9214
    no switchport
@@ -91,31 +91,31 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor 10.0.1.1 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.1 remote-as 65009
-   neighbor 10.0.1.1 description downlink-ipv4-pool-l3leaf1_Ethernet1
+   neighbor 10.0.1.1 description downlink-pools-l3leaf1_Ethernet1
    neighbor 10.0.1.3 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.3 remote-as 65009
-   neighbor 10.0.1.3 description downlink-ipv4-pool-l3leaf1_Ethernet2
+   neighbor 10.0.1.3 description downlink-pools-l3leaf1_Ethernet2
    neighbor 10.0.1.5 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.5 remote-as 65029
-   neighbor 10.0.1.5 description downlink-ipv4-pool-l3leaf3_Ethernet1
+   neighbor 10.0.1.5 description downlink-pools-l3leaf3_Ethernet1
    neighbor 10.0.1.7 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.7 remote-as 65039
-   neighbor 10.0.1.7 description downlink-ipv4-pool-l3leaf4_Ethernet1
+   neighbor 10.0.1.7 description downlink-pools-l3leaf4_Ethernet1
    neighbor 10.0.3.1 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.3.1 remote-as 65029
-   neighbor 10.0.3.1 description downlink-ipv4-pool-l3leaf3_Ethernet3
+   neighbor 10.0.3.1 description downlink-pools-l3leaf3_Ethernet3
    neighbor 10.0.3.19 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.3.19 remote-as 65039
-   neighbor 10.0.3.19 description downlink-ipv4-pool-l3leaf4_Ethernet3
+   neighbor 10.0.3.19 description downlink-pools-l3leaf4_Ethernet3
    neighbor 192.168.1.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.10 remote-as 65009
-   neighbor 192.168.1.10 description downlink-ipv4-pool-l3leaf1
+   neighbor 192.168.1.10 description downlink-pools-l3leaf1
    neighbor 192.168.1.30 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.30 remote-as 65029
-   neighbor 192.168.1.30 description downlink-ipv4-pool-l3leaf3
+   neighbor 192.168.1.30 description downlink-pools-l3leaf3
    neighbor 192.168.1.40 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.40 remote-as 65039
-   neighbor 192.168.1.40 description downlink-ipv4-pool-l3leaf4
+   neighbor 192.168.1.40 description downlink-pools-l3leaf4
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
