--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-spine2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-pools-spine2.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname downlink-ipv4-pool-spine2
+hostname downlink-pools-spine2
 !
 spanning-tree mode none
 !
@@ -16,42 +16,42 @@ no aaa root
 vrf instance MGMT
 !
 interface Ethernet3
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF2_Ethernet1
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF2_Ethernet1
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.2.0/31
 !
 interface Ethernet4
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF2_Ethernet2
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF2_Ethernet2
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.2.2/31
 !
 interface Ethernet5
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet2
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet2
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.4.0/31
 !
 interface Ethernet6
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet2
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet2
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.4.2/31
 !
 interface Ethernet15
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet4
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet4
    no shutdown
    mtu 9214
    no switchport
    ip address 10.0.4.4/31
 !
 interface Ethernet16
-   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet4
+   description P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet4
    no shutdown
    mtu 9214
    no switchport
@@ -91,31 +91,31 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor 10.0.2.1 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.2.1 remote-as 65019
-   neighbor 10.0.2.1 description downlink-ipv4-pool-l3leaf2_Ethernet1
+   neighbor 10.0.2.1 description downlink-pools-l3leaf2_Ethernet1
    neighbor 10.0.2.3 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.2.3 remote-as 65019
-   neighbor 10.0.2.3 description downlink-ipv4-pool-l3leaf2_Ethernet2
+   neighbor 10.0.2.3 description downlink-pools-l3leaf2_Ethernet2
    neighbor 10.0.4.1 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.1 remote-as 65029
-   neighbor 10.0.4.1 description downlink-ipv4-pool-l3leaf3_Ethernet2
+   neighbor 10.0.4.1 description downlink-pools-l3leaf3_Ethernet2
    neighbor 10.0.4.3 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.3 remote-as 65039
-   neighbor 10.0.4.3 description downlink-ipv4-pool-l3leaf4_Ethernet2
+   neighbor 10.0.4.3 description downlink-pools-l3leaf4_Ethernet2
    neighbor 10.0.4.5 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.5 remote-as 65029
-   neighbor 10.0.4.5 description downlink-ipv4-pool-l3leaf3_Ethernet4
+   neighbor 10.0.4.5 description downlink-pools-l3leaf3_Ethernet4
    neighbor 10.0.4.7 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.7 remote-as 65039
-   neighbor 10.0.4.7 description downlink-ipv4-pool-l3leaf4_Ethernet4
+   neighbor 10.0.4.7 description downlink-pools-l3leaf4_Ethernet4
    neighbor 192.168.1.20 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.20 remote-as 65019
-   neighbor 192.168.1.20 description downlink-ipv4-pool-l3leaf2
+   neighbor 192.168.1.20 description downlink-pools-l3leaf2
    neighbor 192.168.1.30 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.30 remote-as 65029
-   neighbor 192.168.1.30 description downlink-ipv4-pool-l3leaf3
+   neighbor 192.168.1.30 description downlink-pools-l3leaf3
    neighbor 192.168.1.40 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.40 remote-as 65039
-   neighbor 192.168.1.40 description downlink-ipv4-pool-l3leaf4
+   neighbor 192.168.1.40 description downlink-pools-l3leaf4
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
