--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-pools-l3leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-pools-l3leaf1.yml
@@ -1,4 +1,4 @@
-hostname: downlink-ipv4-pool-l3leaf1
+hostname: downlink-pools-l3leaf1
 is_deployed: true
 router_bgp:
   as: '65009'
@@ -36,17 +36,17 @@ router_bgp:
   - ip_address: 10.0.1.0
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: downlink-ipv4-pool-spine1
-    description: downlink-ipv4-pool-spine1_Ethernet3
+    peer: downlink-pools-spine1
+    description: downlink-pools-spine1_Ethernet3
   - ip_address: 10.0.1.2
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: downlink-ipv4-pool-spine1
-    description: downlink-ipv4-pool-spine1_Ethernet4
+    peer: downlink-pools-spine1
+    description: downlink-pools-spine1_Ethernet4
   - ip_address: 192.168.0.10
     peer_group: EVPN-OVERLAY-PEERS
-    peer: downlink-ipv4-pool-spine1
-    description: downlink-ipv4-pool-spine1
+    peer: downlink-pools-spine1
+    description: downlink-pools-spine1
     remote_as: '65000'
   address_family_evpn:
     peer_groups:
@@ -68,19 +68,19 @@ management_api_http:
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet1
-  peer: downlink-ipv4-pool-spine1
+  peer: downlink-pools-spine1
   peer_interface: Ethernet3
   peer_type: spine
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet3
+  description: P2P_LINK_TO_DOWNLINK-POOLS-SPINE1_Ethernet3
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.1.1/31
 - name: Ethernet2
-  peer: downlink-ipv4-pool-spine1
+  peer: downlink-pools-spine1
   peer_interface: Ethernet4
   peer_type: spine
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet4
+  description: P2P_LINK_TO_DOWNLINK-POOLS-SPINE1_Ethernet4
   shutdown: false
   mtu: 9214
   type: routed
@@ -117,7 +117,7 @@ ip_igmp_snooping:
   globally_enabled: true
 vxlan_interface:
   Vxlan1:
-    description: downlink-ipv4-pool-l3leaf1_VTEP
+    description: downlink-pools-l3leaf1_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Loopback1
