--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-pools-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-pools-spine2.yml
@@ -1,4 +1,4 @@
-hostname: downlink-ipv4-pool-spine2
+hostname: downlink-pools-spine2
 is_deployed: true
 router_bgp:
   as: '65000'
@@ -37,47 +37,47 @@ router_bgp:
   - ip_address: 10.0.2.1
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65019'
-    peer: downlink-ipv4-pool-l3leaf2
-    description: downlink-ipv4-pool-l3leaf2_Ethernet1
+    peer: downlink-pools-l3leaf2
+    description: downlink-pools-l3leaf2_Ethernet1
   - ip_address: 10.0.2.3
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65019'
-    peer: downlink-ipv4-pool-l3leaf2
-    description: downlink-ipv4-pool-l3leaf2_Ethernet2
+    peer: downlink-pools-l3leaf2
+    description: downlink-pools-l3leaf2_Ethernet2
   - ip_address: 10.0.4.1
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65029'
-    peer: downlink-ipv4-pool-l3leaf3
-    description: downlink-ipv4-pool-l3leaf3_Ethernet2
+    peer: downlink-pools-l3leaf3
+    description: downlink-pools-l3leaf3_Ethernet2
   - ip_address: 10.0.4.3
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65039'
-    peer: downlink-ipv4-pool-l3leaf4
-    description: downlink-ipv4-pool-l3leaf4_Ethernet2
+    peer: downlink-pools-l3leaf4
+    description: downlink-pools-l3leaf4_Ethernet2
   - ip_address: 10.0.4.5
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65029'
-    peer: downlink-ipv4-pool-l3leaf3
-    description: downlink-ipv4-pool-l3leaf3_Ethernet4
+    peer: downlink-pools-l3leaf3
+    description: downlink-pools-l3leaf3_Ethernet4
   - ip_address: 10.0.4.7
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65039'
-    peer: downlink-ipv4-pool-l3leaf4
-    description: downlink-ipv4-pool-l3leaf4_Ethernet4
+    peer: downlink-pools-l3leaf4
+    description: downlink-pools-l3leaf4_Ethernet4
   - ip_address: 192.168.1.20
     peer_group: EVPN-OVERLAY-PEERS
-    peer: downlink-ipv4-pool-l3leaf2
-    description: downlink-ipv4-pool-l3leaf2
+    peer: downlink-pools-l3leaf2
+    description: downlink-pools-l3leaf2
     remote_as: '65019'
   - ip_address: 192.168.1.30
     peer_group: EVPN-OVERLAY-PEERS
-    peer: downlink-ipv4-pool-l3leaf3
-    description: downlink-ipv4-pool-l3leaf3
+    peer: downlink-pools-l3leaf3
+    description: downlink-pools-l3leaf3
     remote_as: '65029'
   - ip_address: 192.168.1.40
     peer_group: EVPN-OVERLAY-PEERS
-    peer: downlink-ipv4-pool-l3leaf4
-    description: downlink-ipv4-pool-l3leaf4
+    peer: downlink-pools-l3leaf4
+    description: downlink-pools-l3leaf4
     remote_as: '65039'
   address_family_evpn:
     peer_groups:
@@ -101,55 +101,55 @@ management_api_http:
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet3
-  peer: downlink-ipv4-pool-l3leaf2
+  peer: downlink-pools-l3leaf2
   peer_interface: Ethernet1
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF2_Ethernet1
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF2_Ethernet1
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.2.0/31
 - name: Ethernet4
-  peer: downlink-ipv4-pool-l3leaf2
+  peer: downlink-pools-l3leaf2
   peer_interface: Ethernet2
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF2_Ethernet2
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF2_Ethernet2
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.2.2/31
 - name: Ethernet5
-  peer: downlink-ipv4-pool-l3leaf3
+  peer: downlink-pools-l3leaf3
   peer_interface: Ethernet2
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet2
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet2
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.4.0/31
 - name: Ethernet6
-  peer: downlink-ipv4-pool-l3leaf4
+  peer: downlink-pools-l3leaf4
   peer_interface: Ethernet2
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet2
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet2
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.4.2/31
 - name: Ethernet15
-  peer: downlink-ipv4-pool-l3leaf3
+  peer: downlink-pools-l3leaf3
   peer_interface: Ethernet4
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet4
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF3_Ethernet4
   shutdown: false
   mtu: 9214
   type: routed
   ip_address: 10.0.4.4/31
 - name: Ethernet16
-  peer: downlink-ipv4-pool-l3leaf4
+  peer: downlink-pools-l3leaf4
   peer_interface: Ethernet4
   peer_type: l3leaf
-  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet4
+  description: P2P_LINK_TO_DOWNLINK-POOLS-L3LEAF4_Ethernet4
   shutdown: false
   mtu: 9214
   type: routed
