--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/default_interface_mtu_platform.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/default_interface_mtu_platform.yml
@@ -11,6 +11,11 @@ interface_defaults:
 vrfs:
 - name: MGMT
   ip_routing: false
+platform:
+  sand:
+    lag:
+      hardware_only: true
+      mode: 512x32
 management_api_http:
   enable_vrfs:
   - name: MGMT
