--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/default_interface_mtu_platform.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/default_interface_mtu_platform.yml
@@ -9,3 +9,8 @@ default_interface_mtu: 8765 # This will not be used since platform settings take
 platform_settings:
   - platforms: [ default ]
     default_interface_mtu: 1234
+    structured_config:
+      sand:
+        lag:
+          hardware_only: true
+          mode: "512x32"
