--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2586,6 +2586,9 @@ keys:
           type: str
           description: EOS CLI rendered directly on the root level of the final EOS
             configuration.
+        structured_config:
+          type: dict
+          description: Custom structured config for eos_cli_config_gen.
     default:
     - platforms:
       - default
