Added example to test natural sort.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -5,6 +5,9 @@ transceiver qsfp default-mode 4x10G
 hostname router-service-insertion
 !
 router service-insertion
+   connection aconnection
+      interface Ethernet4/1 next-hop 10.10.10.10
+      monitor connectivity host host4
    connection connection1
       interface Ethernet2/2.2 next-hop 10.10.10.10
       monitor connectivity host host1
