--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-service-insertion.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-service-insertion.yml
@@ -25,7 +25,7 @@ router_service_insertion:
         secondary: Tunnel6
     - name: connection6
       ethernet_interface:
-        name: Ethernet2/2.2
+        name: Ethernet2
         next_hop: 10.10.10.10
     - name: connection7
       ethernet_interface:
@@ -35,3 +35,12 @@ router_service_insertion:
         primary: Tunnel9
         secondary: Tunnel10
       monitor_connectivity_host: host4
+    - name: aconnection
+      ethernet_interface:
+        name: Ethernet4/1
+        next_hop: 10.10.10.10
+      tunnel_interface:
+        primary: Tunnel11
+        secondary: Tunnel12
+      monitor_connectivity_host: host4
+
