Test: Add connected endpoint tests for custom templates and fix typo

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1A.cfg
@@ -57,6 +57,12 @@ interface Ethernet4
    no shutdown
    channel-group 3 mode active
 !
+interface Ethernet11
+   description TEST_CUSTOM_PREFIX_SERVER-1_Nic1
+   no shutdown
+   switchport mode trunk
+   switchport
+!
 interface Loopback0
    description TEST_CUSTOM_PREFIX_EVPN_Overlay_Peering_L3LEAF
    no shutdown
