--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
@@ -40,6 +40,12 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel12
+   description TEST_CUSTOM_PREFIX_SERVER-2_portchannel
+   no shutdown
+   switchport
+   switchport mode trunk
+!
 interface Ethernet1
    description TEST_CUSTOM_PREFIX_P2P_LINK_TO_CUSTOM-TEMPLATES-SPINE1_Ethernet2
    no shutdown
@@ -56,6 +62,16 @@ interface Ethernet4
    description TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Ethernet4
    no shutdown
    channel-group 3 mode active
+!
+interface Ethernet12
+   description TEST_CUSTOM_PREFIX_SERVER-2_Nic1
+   no shutdown
+   channel-group 12 mode active
+!
+interface Ethernet13
+   description TEST_CUSTOM_PREFIX_SERVER-2_Nic2
+   no shutdown
+   channel-group 12 mode active
 !
 interface Loopback0
    description TEST_CUSTOM_PREFIX_EVPN_Overlay_Peering_L3LEAF
