--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
@@ -207,6 +207,14 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.31.255.21/31
+- name: Ethernet11
+  peer: SERVER-1
+  peer_interface: Nic1
+  peer_type: server
+  description: TEST_CUSTOM_PREFIX_SERVER-1_Nic1
+  shutdown: false
+  type: switched
+  mode: trunk
 mlag_configuration:
   domain_id: CUSTOM_TEMPLATES_L3LEAF1
   local_interface: Vlan4094
