Committing after re-run of molecule.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -24,7 +24,7 @@ router service-insertion
       interface Tunnel5 primary
       interface Tunnel6 secondary
    connection connection6
-      interface Ethernet2/2.2 next-hop 10.10.10.10
+      interface Ethernet2 next-hop 10.10.10.10
    connection connection7
       interface Ethernet3/1 next-hop 10.10.10.10
       monitor connectivity host host4
