Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1B.cfg
@@ -33,6 +33,17 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel4
+   description TEST-MGMT-GATEWAY-IN-NODE-GROUP_Po1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan none
+   switchport trunk native vlan tag
+   switchport mode trunk
+   mlag 4
+   storm-control broadcast level 25
+   storm-control unknown-unicast level 25
+!
 interface Port-Channel5
    description UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1_Po1
    no shutdown
@@ -53,14 +64,14 @@ interface Ethernet1
    pim ipv4 sparse-mode
 !
 interface Ethernet3
-   description MLAG_PEER_UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A_Ethernet3
+   description TEST-MGMT-GATEWAY-IN-NODE-GROUP1_Ethernet2
    no shutdown
-   channel-group 3 mode active
+   channel-group 4 mode active
 !
 interface Ethernet4
-   description MLAG_PEER_UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A_Ethernet4
+   description TEST-MGMT-GATEWAY-IN-NODE-GROUP-NODES_Ethernet2
    no shutdown
-   channel-group 3 mode active
+   channel-group 4 mode active
 !
 interface Ethernet5
    description UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1A_Ethernet2
